# qsigviewer

./: .gitignore  CMakeLists.txt  README.md
libs/qcustomplot/: CMakeLists.txt
src/app/: CMakeLists.txt  filedialog.cpp  filedialog.h  filedialog.ui  infinitydial.cpp  infinitydial.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  signaldata.cpp  signaldata.h  spectrumwin.cpp  spectrumwin.h  spectrumwin.ui  timeticker.cpp  timeticker.h  utils.cpp  utils.h
src/app/resources/: qsigviewer.icns  qsigviewer.rc
